--- a/BackendVictus/src/main/resources/application.properties
+++ b/BackendVictus/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=BackendVictus
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/victus
-spring.datasource.username=victus
-spring.datasource.password=victus
+spring.datasource.url=jdbc:postgresql://switchback.proxy.rlwy.net:23578/railway
+spring.datasource.username=postgres
+spring.datasource.password=pTcDaULJAByAUYdErUvHgKIwjISJLEjU
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
