fix: configure secure r2dbc connection

--- a/BackendVictus/src/main/resources/application.yml
+++ b/BackendVictus/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   main:
     web-application-type: reactive
   r2dbc:
-    url: r2dbc:postgresql://switchback.proxy.rlwy.net:23578/railway
-    username: postgres
-    password: pTcDaULJAByAUYdErUvHgKIwjISJLEjU
+    url: ${SPRING_R2DBC_URL:r2dbc:postgresql://switchback.proxy.rlwy.net:23578/railway?sslMode=require}
+    username: ${SPRING_R2DBC_USERNAME:postgres}
+    password: ${SPRING_R2DBC_PASSWORD:pTcDaULJAByAUYdErUvHgKIwjISJLEjU}
     pool:
       enabled: true
       initial-size: 5
